tests/ui/codemap_tests/issue-28308.stderr
error[E0308]: mismatched types
  --> $DIR/issue-28308.rs:2:13
   |
LL |     assert!("foo");
   |             ^^^^^ expected `bool`, found `str`

error[E0308]: mismatched types
  --> $DIR/issue-28308.rs:6:13
   |
LL |     assert!(x);
   |             ^ expected `bool`, found `Option<&{integer}>`
   |
   = note: expected enum `bool`
              found type `Option<&{integer}>`

error[E0308]: mismatched types
  --> $DIR/issue-28308.rs:11:13
   |
LL |     assert!(x, "");
   |             ^ expected `bool`, found `Option<&{integer}>`
   |
   = note: expected enum `bool`
              found type `Option<&{integer}>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
